# textbook_assembler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
materials/: citations.bib  lesson_plan.csv  ref_to_file.yaml
textbook_assembler/: __init__.py  __main__.py  main.py
textbook_assembler/tests/: test_data.py  test_latex.py  test_main.py  test_make_text.py  test_references.py
textbook_assembler/tests/resources/bibtex/: test1.bib
textbook_assembler/tests/resources/csvs/: input_data.csv  test1.csv  test2.csv  test3.csv  test4.csv  test_complete_w_indexcol.csv
textbook_assembler/utils/: constants.py  data.py  latex.py  make_text.py  references.py
