[metadata]
name = textbook_assembler
version = 1.0.0
description = Assembles a PDF textbook from sources and adds citations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/textbook_assembler
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    pyyaml
    unidecode
    pypdf
    pylatex
    pandas
    bibtexparser

[options.packages.find]
exclude = tests*
